--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html><head><title>WebApp/2</title>
 <script type="module" src="./lib/App.js"></script>
+<script nomodule src="./bundle.js"></script>
 </head><body>
   <h1>WebApp/2 it Works!</h1>
 </body>
