--- a/app/index.html
+++ b/app/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><head><title>WebApp/2</title>
 </head><body>
   <h1>WebApp/2 it Works!</h1>
-  <script type="module" src="./lib/App.js"></script>
+  <script type="module" src="./lib/AppMain.js"></script>
   <script nomodule src="./bundle.js"></script>
 </body>
 </html>
