add rollup transpile/bundle pattern

--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 </head><body>
   <h1>WebApp/2 it Works!</h1>
   <script type="module" src="./lib/AppMain.js"></script>
-  <script nomodule src="./bundle.js"></script>
+  <script defer nomodule src="./bundle.js"></script>
 </body>
 </html>
 
