--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,8 @@
 </head><body>
   <h1>WebApp/2 it Works!</h1>
   <script type="module" src="./lib/AppMain.js"></script>
-  <script defer nomodule src="./bundle.js"></script>
+  <script defer nomodule src="./assets/modules/es6.polyfill.js"></script><!-- if you need IE11 support -->
+  <script defer nomodule src="./bundle.js"></script><!-- if you need supporting ESModule unavailable browsers -->
 </body>
 </html>
 
